--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -274,5 +274,9 @@
   "please-select-a-reason-for-your-return": "Please select a reason for your return",
   "choose-a-response": "Choose a response",
   "edit-address": "Edit Address",
-  "split-into-multiple-shipments": "Split into multiple shipments"
+  "split-into-multiple-shipments": "Split into multiple shipments",
+  "continue": "Continue",
+  "shipments-of": "Shipment {{shipmentNumber}} of {{numberOfShipments}}",
+  "multiple-addresses": "Multiple addresses",
+  "ship-to": "Ship to"
 }
