--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -287,5 +287,7 @@
   "status": "Status",
   "shipment-frequency": "Shipment Frequency",
   "estimated-next-arrival-date": "Estimated Arrival for next delivery",
-  "no-subscription-message": "You do not have any subscriptions"
+  "no-subscription-message": "You do not have any subscriptions",
+  "skip-next-subscription-confirmation": "Are you sure you want to skip next subscription order?",
+  "next-order-skip": "Skipped next subscription order. Next order will be placed on "
 }
