--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -283,9 +283,13 @@
   "edit-billing-information": "Edit Billing Information",
   "edit-shipping-address": "Edit Shipping Address",
   "pause-subscription": "Pause Subscription",
-  "subscription-number": "Subscription Number",
-  "status": "Status",
+  "subscription-number": "Subscription Number :",
+  "status": "Status : ",
   "shipment-frequency": "Shipment Frequency",
   "estimated-next-arrival-date": "Estimated Arrival for next delivery",
-  "no-subscription-message": "You do not have any subscriptions"
+  "no-subscription-message": "You do not have any subscriptions",
+  "select-subscription-frequency": "Select subscription frequency",
+  "confirm": "Confirm",
+  "edit-subscription-frequency": "Edit Subscription Frequency",
+  "subscription-frequency-updated-successfully": "Subscription frequency updated successfully"
 }
